--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -67,8 +67,9 @@ section.container figure img {
 
 section.container figure img:hover {
   transform: scale(1.3);
-  filter: drop-shadow(10px 10px 30px, rgba(255, 255, 255, 0.2));
 
+  filter: drop-shadow(10px 10px 30px rgb(255, 255, 255));
+  
 }
 
 section.container figure summary {
