--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -19,10 +19,10 @@ h1,h2,h3 {
 }
 
 h1 {
-  font-size: 100px;
+  font-size: clamp(35px, 4vw, 80px);
 }
 h2 {
-  font-size: 40px;
+  font-size: clamp(30px, 4vw, 50px);
 }
 main, section, footer {
   width: 90%;
@@ -30,6 +30,7 @@ main, section, footer {
 }
 
 p {
+  font-size: clamp(17px, 4vw, 23px);
   font-family: 'Space Mono', monospace;
   font-size: 25px;
 }
@@ -71,6 +72,20 @@ section.container figure img:hover {
   filter: drop-shadow(10px 10px 30px rgb(255, 255, 255));
   
 }
+
+@media (max-width: 768px) {
+  section.container {
+    flex-direction: column;
+  }
+  section.container div {
+    width: 100%;
+    margin-bottom: 130px;
+  }
+  section.container figure img:hover {
+    transform: scale(1);
+  }
+}
+
 
 section.container figure summary {
   cursor: pointer;
